spring config에 eureka 설정파일 추가

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,17 +2,17 @@ spring:
   application:
     name: config-server
   profiles:
-    active:
-      - native, git
+    active: native
+#      - native, git
 
   cloud:
     config:
       server:
         native:
           search-locations: classpath:/config
-        git:
-          uri: https://github.com/klimtever/config.git
-          searchPaths: licensingservice
+#        git:
+#          uri: https://github.com/klimtever/config.git
+#          searchPaths: licensingservice
 
 server:
   port: 8071
